tweak margin of lists to avoid overlap

--- a/res/index.css
+++ b/res/index.css
@@ -35,6 +35,7 @@ section {
 .swrapper ul {
   padding-left: 5px;
   margin: 0px;
+  margin-right: 5px;
 }
 h2 {
   margin: 5px;
